--- a/FL11_HW4/homework/index.html
+++ b/FL11_HW4/homework/index.html
@@ -39,6 +39,7 @@
                 <h2>Some article heading</h2>
                 <img src="img/sample-1.jpg" alt="news">
                 <span class="likes">154 &#9829;</span>
+                <p class="info">July 18 <span>Spain</span></p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut ipsa dicta dolorem a quibusdam eum quasi vel nobis dolores dolore tempora, ex, assmenda quam veritatis, iure optio soluta sequi?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut ipsa dicta dolorem a quibusdam eum quasi vel nobis dolores dolore tempora, ex, assmenda quam veritatis, iure optio soluta sequi?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut ipsa dicta dolorem a quibusdam eum quasi vel nobis dolores dolore tempora, ex, assmenda quam veritatis, iure optio soluta sequi?</p>
@@ -47,6 +48,7 @@
                 <h2>Some article heading</h2>
                 <img src="img/sample-2.jpg" alt="news">
                 <span class="likes">172 &#9829;</span>
+                <p class="info">January 18 <span>South France</span></p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut ipsa dicta dolorem a quibusdam eum quasi vel nobis dolores dolore tempora, ex, assmenda quam veritatis, iure optio soluta sequi?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut ipsa dicta dolorem a quibusdam eum quasi vel nobis dolores dolore tempora, ex, assmenda quam veritatis, iure optio soluta sequi?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut ipsa dicta dolorem a quibusdam eum quasi vel nobis dolores dolore tempora, ex, assmenda quam veritatis, iure optio soluta sequi?</p>
