footer bg color

--- a/FL11_HW13/homework/index.html
+++ b/FL11_HW13/homework/index.html
@@ -117,7 +117,7 @@
         </div>
       </section>
     </main>
-    <footer class="container text-white bg-secondary">
+    <footer class="container text-white">
       <p class="my-0 py-2">&#169; Epam Front-end lab, 2018</p>
     </footer>
   </body>
