--- a/FL11_HW13/homework/index.html
+++ b/FL11_HW13/homework/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="styles/bootstrap.min.css" />
@@ -18,7 +18,15 @@
         <a class="navbar-brand" href="#">
           <img src="img/logo.png" alt="" />
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -26,15 +34,19 @@
             <li class="nav-item active">
               <a class="nav-link" href="#">Classes</a>
             </li>
-            <li class="nav-item"><a class="nav-link text-dark" href="#">About us</a></li>
-            <li class="nav-item"><a class="nav-link text-dark" href="#">Contacts</a></li>
+            <li class="nav-item">
+              <a class="nav-link text-dark" href="#">About us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-dark" href="#">Contacts</a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
     <main class="container px-0">
       <section class="mb-4">
-          <h1 class="h1 pb-2 mb-3 mt-4 border-bottom">Yoga Pilates</h1>        
+        <h1 class="h1 pb-2 mb-3 mt-4 border-bottom">Yoga Pilates</h1>
         <div class="row">
           <img src="img/yoga.jpg" class="img-fluid col-lg-8" alt="" />
           <div class="col-lg">
@@ -55,52 +67,50 @@
               <li>Free before / after shower</li>
             </ul>
           </div>
-        </section>
-    </div>     
-    <section>
-        <h4 class="h4 pb-2 mb-3 border-bottom">Related classes</h4>        
-        <div class="row mx-0 mb-4 ml-md-n2 mr-md-n2">            
-          <div class="card px-0 col-sm-6 col-md mb-sm-3 mb-md-0">              
-            <div class="mr-sm-2 ml-md-2">
-                    <img
-                    src="img/cardio-kickbox.jpg"
-                    class="card-img-top"
-                    alt="Cardio kickboxing"
-                  />
-                  <div class="card-body">
-                    <h5 class="card-title">Cardio kickboxing</h5>
-                  </div>            
-            </div>            
-          </div>          
+        </div>
+      </section>
+      <section>
+        <h4 class="h4 pb-2 mb-3 border-bottom">Related classes</h4>
+        <div class="row mx-0 mb-4 ml-md-n2 mr-md-n2">
           <div class="card px-0 col-sm-6 col-md mb-sm-3 mb-md-0">
-              <div class="ml-sm-2 mr-md-2">
-                <img
-                  src="img/fitness.jpg"
-                  class="card-img-top"
-                  alt="Fitness xpress"
-                />
-                <div class="card-body">
-                  <h5 class="card-title">Fitness xpress</h5>
-                </div>
-              </div>
-            </div>          
-          <div class="card px-0 col-sm-6 col-md">
-              <div class="mr-sm-2 ml-md-2"> <img
-                src="img/zumba.jpg"                
+            <div class="mr-sm-2 ml-md-2">
+              <img
+                src="img/cardio-kickbox.jpg"
                 class="card-img-top"
-                alt="Zumba"
+                alt="Cardio kickboxing"
               />
+              <div class="card-body">
+                <h5 class="card-title">Cardio kickboxing</h5>
+              </div>
+            </div>
+          </div>
+          <div class="card px-0 col-sm-6 col-md mb-sm-3 mb-md-0">
+            <div class="ml-sm-2 mr-md-2">
+              <img
+                src="img/fitness.jpg"
+                class="card-img-top"
+                alt="Fitness xpress"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Fitness xpress</h5>
+              </div>
+            </div>
+          </div>
+          <div class="card px-0 col-sm-6 col-md">
+            <div class="mr-sm-2 ml-md-2">
+              <img src="img/zumba.jpg" class="card-img-top" alt="Zumba" />
               <div class="card-body">
                 <h5 class="card-title">Zumba</h5>
               </div>
-            </div>           
+            </div>
           </div>
           <div class="card px-0 col-sm-6 col-md">
-              <div class="ml-sm-2 mr-md-2"><img src="img/bootcamp.jpg" class="card-img-top" alt="Bootcamp" />
-                <div class="card-body">
-                  <h5 class="card-title">Bootcamp</h5>
-                </div>
-              </div>            
+            <div class="ml-sm-2 mr-md-2">
+              <img src="img/bootcamp.jpg" class="card-img-top" alt="Bootcamp" />
+              <div class="card-body">
+                <h5 class="card-title">Bootcamp</h5>
+              </div>
+            </div>
           </div>
         </div>
       </section>
