--- a/FL11_HW13/homework/index.html
+++ b/FL11_HW13/homework/index.html
@@ -7,10 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/bootstrap.min.css" />
     <link rel="stylesheet/less" type="text/css" href="styles/styles.less" />
-    <script src="js/jquery-3.4.1.js"></script>
-    <script src="js/popper.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/less.js"></script>
+    <script src="js/less.min.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light border-bottom py-md-0">
