--- a/FL11_HW15/homework/index.html
+++ b/FL11_HW15/homework/index.html
@@ -7,6 +7,6 @@
     <title>OOP</title>
 </head>
 <body>
-    <script src="app.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 </html>
