--- a/FL11_HW18/homework/index.html
+++ b/FL11_HW18/homework/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">      
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FL11 HW18 AJAX</title>
-    <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
     <div id="wrapper">
-        <h3>Please, press GET button to start</h3>
-        <p id="message"></p>
-        <select id="select"></select>
-        <br />
-        <textarea id="output"></textarea>
-    <button id="get">GET</button>
-    <button id="put">PUT</button>
-    <button id="delete">DELETE</button>    
-    <button id="showUserPosts">Show user posts and comments</button>
-    
+      <h3>Please, press GET button to start</h3>
+      <p id="message"></p>
+      <select id="select"></select>
+      <br />
+      <textarea id="output"> </textarea>
+      <button id="get">GET</button>
+      <button id="put">PUT</button>
+      <button id="delete">DELETE</button>
+      <button id="showUserPosts">Show user posts and comments</button>
+      <div id="loader"></div>
+    </div>
+    <div id="postsOutput"></div>
     <script src="js/main.js"></script>
-</div>
-<div id="postsOutput"></div>
-<div id="loader"></div>
-</body>
+  </body>
 </html>
