--- a/FL11_HW18/homework/index.html
+++ b/FL11_HW18/homework/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset='UTF-8' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <title>FL11 HW18 AJAX</title>
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel='stylesheet' href='css/main.css' />
   </head>
   <body>
-    <div id="wrapper">
+    <div id='wrapper'>
       <h3>Please, press GET button to start</h3>
-      <p id="message"></p>
-      <select id="select"></select>
+      <p id='message'></p>
+      <div id='img'><img src='' alt='' /></div>
+      <select id='select'></select>
       <br />
-      <textarea id="output"> </textarea>
-      <button id="get">GET</button>
-      <button id="put">PUT</button>
-      <button id="delete">DELETE</button>
-      <button id="showUserPosts">Show user posts and comments</button>
-      <div id="loader"></div>
+      <textarea id='output'> </textarea>
+      <button id='get'>GET</button>
+      <button id='put'>PUT</button>
+      <button id='delete'>DELETE</button>
+      <button id='showUserPosts'>Show user posts and comments</button>
+      <div id='loader'></div>
     </div>
-    <div id="postsOutput"></div>
-    <script src="js/main.js"></script>
+    <div id='postsOutput'></div>
+    <script src='js/main.js'></script>
   </body>
 </html>
